# file-merger

./: .gitignore  CMakeLists.txt  main.c
lib/: CMakeLists.txt  helper.c  helper.h  reader.c  reader.h  validator.c  validator.h
test/: CMakeLists.txt  helper_test.c  validator_test.c
